--- a/index.html
+++ b/index.html
@@ -19,38 +19,40 @@
         <div class="head">
         <nav>
             <ul class="nav-list">
-                <li><a href="/" class="text-left">Watch and interact with your favorite musicians Live from their studio.</a>
+                <li><a href="#" class="text-left">Watch and interact with your favorite musicians Live from their studio.</a>
                 </li>
                     <li class="got-it">
-                        <a href="/" class="btn-got-it">Got it!</a>
+                        <a href="#" class="btn-got-it">Got it!</a>
+                </li>
             </ul>
         </nav>
         </div>
+
         <div class="head-2">
             <nav>
                 <ul class="nav-list">
                     <li class="logo">
-                        <a href="/" aria-label="Логотип сайта">
+                        <a href="#" aria-label="Логотип сайта">
                             <img src="images/Frame%20(3).png" alt="логотип сайта" >
                             </a>
                     </li>
-                    <li><a href="/" class="text-left">UPCOMING</a></li>
-                    <li><a href="/" class="text-left">VIDEOS</a></li>
-                    <li><a href="/" class="text-left">ARTISTS</a></li>
-                    <li><a href="/" class="text-left">BLOG</a></li>
+                    <li><a href="#" class="text-left">/UPCOMING</a></li>
+                    <li><a href="#" class="text-left">/VIDEOS</a></li>
+                    <li><a href="#" class="text-left">/ARTISTS</a></li>
+                    <li><a href="#" class="text-left">/BLOG</a></li>
 
-                    <li><a href="/" class="text-left">JOIN</a></li>
-                    <li><a href="/" class="text-left">YOU'RE AN ARTIST?</a></li>
-                    <li><a href="/" class="text-left">LOGIN</a></li>
+                    <li><a href="#" class="text-left">/JOIN</a></li>
+                    <li><a href="#" class="text-left">/YOU'RE AN ARTIST?</a></li>
+                    <li><a href="#" class="text-left">/LOGIN</a></li>
 
                     <div class="logo-img">
-                    <a href="/" aria-label="Логотип сайта">
+                    <a href="#" aria-label="Логотип сайта">
                         <img src="images/Frame.png" alt="логотип сайта" >
                     </a>
-                    <a href="/" aria-label="Логотип сайта">
+                    <a href="#" aria-label="Логотип сайта">
                         <img src="images/Frame%20(1).png" alt="логотип сайта" >
                     </a>
-                    <a href="/" aria-label="Логотип сайта">
+                    <a href="#" aria-label="Логотип сайта">
                         <img src="images/Frame%20(2).png" alt="логотип сайта" >
                     </a>
                     </div>
